Tests/RunCMake/CMakePresets/ExtraPresetField-stderr.txt
^CMake Error: Could not read presets from [^
]*/Tests/RunCMake/CMakePresets/ExtraPresetField:
Error: @8,18: Invalid extra field "invalid" in Preset
      "invalid": true
                 \^$
